# qa_guru_3_19_hw

./: .gitignore  README.md  pyproject.toml  settings.toml
schemas/: user_schemas.py
tests/: conftest.py  test_demo_web_shop.py  test_regres_in.py
